--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div class="container">
           <div class="navbar-brand bg-info pt-3"><h3 class="text-white px-3" style="font-family: serif;">Eric Waldman</h3></div>
           <div class="navbar-nav">
-              <a class="nav-item nav-link active text-info" href="#">About</a>
-              <a class="nav-item nav-link text-info" href="#">Portfolio</a>
-              <a class="nav-item nav-link text-info" href="#">Contact</a>
+              <a class="nav-item nav-link active text-info" href="index.html">About</a>
+              <a class="nav-item nav-link text-info" href="portfolio.html">Portfolio</a>
+              <a class="nav-item nav-link text-info" href="contact.html">Contact</a>
           </div>
         </div> <!-- Nav container -->
       </nav>
@@ -57,7 +57,7 @@
     <footer class="nav bg-secondary text-white navbar-expand-sm" style="border-top: 6px #4aaaa5 solid;">
       <div class="container py-5">
         <div class="text-center">
-          <h6 class="text-white" style=" font-size: 10px;">Copyright</h6>
+          <h6 class="text-white" style=" font-size: 10px;">Copyright&copy;</h6>
         </div>
       </div>
     </footer>
