updated portfolio and contact pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,14 @@
     <title>Bootstrap-Portfolio</title>
 </head>
 
+<style>
+    @media only screen and (max-width: 640px) {
+        .mart {
+            padding-top: 25px !IMPORTANT;
+        }
+    }
+</style>
+
 <body style="background-image: url('assets/images/concrete_seamless.png');">
     <!-- Navigation -->
     <nav class="navbar bg-white text-info navbar-expand-sm mb-4 p-0" style="border-bottom: 2px #cccccc solid">
@@ -37,7 +45,7 @@
         </div>
     </div>
         
-    <div class="row m-4 pt-4">
+    <div class="row m-4">
         <div class="col d-flex justify-content-center">
             <div class="card border-0" style="width: 274px;">
                 <img class="card-img-top rounded-0" src="assets/images/business-q-c-274-206-7.jpg" alt="Man at desk">
@@ -47,7 +55,7 @@
             </div>
         </div>
 
-        <div class="col d-flex justify-content-center">
+        <div class="mart col d-flex justify-content-center">
             <div class="card border-0" style="width: 274px;">
                 <img class="card-img-top rounded-0" src="assets/images/technics-q-c-274-206-2.jpg" alt="DJ's turn table">
                 <div class="card-body bg-info">
@@ -67,7 +75,7 @@
             </div>
         </div>
     
-        <div class="col d-flex justify-content-center">
+        <div class="mart col d-flex justify-content-center">
             <div class="card border-0" style="width: 274px;">
                 <img class="card-img-top rounded-0" src="assets/images/technics-q-c-274-206-5.jpg" alt="Ear bud headphones">
                 <div class="card-body bg-info">
@@ -82,7 +90,7 @@
             <div class="card border-0" style="width: 274px;">
                 <img class="card-img-top rounded-0" src="assets/images/technics-q-c-274-206-9.jpg" alt="Computer screen">
                 <div class="card-body bg-info mb-4">
-                    <p class="card-text bg-info text-white text-center rounded-0 mb" style="font-family: serif;">Rock Paper Scissors</p>
+                    <p class="card-text bg-info text-white text-center rounded-0" style="font-family: serif;">Rock Paper Scissors</p>
                 </div>
             </div>
         </div>
