--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             <h3 style="font-family: serif;">Contact</h3>
         </div>
     </div>
-
+        <!-- Form Inputs -->
         <form class="container">
             <div class="form-group">
                 <label for="name" class="text-secondary mt-4">Name</label>
@@ -44,6 +44,10 @@
             <div class="form-group">
                 <label for="exampleInputEmail1" class="text-secondary mt-2">Email</label>
                 <input type="email" class="form-control rounded-0" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@gmail.com">
+            </div>
+            <div class="form-group">
+                <label for="comment" class="text-secondary mt-2">Comment</label>
+                <textarea class="form-control rounded-0" aria-label="With textarea"></textarea>
             </div>
             <button type="submit" style="background-color: none; color: none" class="btn btn-primary bg-info text-white border-0 rounded-0 mt-2 mb-5">Submit</button>
         </form>
